--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>这是我使用github pages搭建的个人站点。</h1>
+<body onload="load()">
 </body>
 </html>
+<script>
+    function load () {
+        window.open('https://chengliang666.github.io/r-blog/blog/dist', '_self')
+    }
+</script>
