updata file build path

--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html>
-<body onload="load()">
+<body>
 </body>
 </html>
 <script>
-    function load () {
-        window.open('https://chengliang666.github.io/r-blog/blog/dist', '_self')
-    }
+    window.open('https://chengliang666.github.io/r-blog/blog/dist', '_self')
 </script>
